# Studia_I_stopnia

./: .gitignore  Makefile  README.md  egzamin_licencjacki.md  zad_4_02.py  zad_4_03.py  zad_4_04.py
2A/: main.c
Gimp01/: zadanie1.xcf  zadanie2.xcf  zadanie3.xcf
N15/: Makefile  conjugate_gradients.c  conjugate_gradients.x  cubic_eps.txt  cubic_spline.c  cubic_spline.x  data.txt  generator.c  generator.x  input.txt
N3/: Makefile  data.txt  operations.h  power_method.c  power_method.x
N8/: Makefile  N8.txt  data_generator.c  lagrange.c  lagrange_factors.txt  lagrange_plot.txt
O1/: Makefile  O1_a.txt  O1_b.txt  conjugate_gradients.c
O2/: Makefile  O2.txt  gauss_seidel.c  gradients_output.txt  matrix_generator.c  operations.h
O7/: Makefile  O7.txt  lagrange.c  lagrange_factors.txt  lagrange_plot.txt
O9/: Makefile  O9.txt  cubic_eps.txt  cubic_spline.c  data_generator.c  operations.h
Projekt/: ArrayList.hpp  Base.hpp  Generator.cpp  Generator.x  KDBase.hpp  KDPoints.cpp  KDPoints.hpp  KDPoints.x  Makefile  Points.cpp  Points.hpp  Points.x  input.txt  kdbase_output.txt  test.sh
Quaternions/: README.md  quaterion.py  test_quaterion.py
Zadanie01/: .project
Zadanie02/: .project
Zadanie04/: Position2D.java
Zadanie07/: .project
Zadanie10/: Kasjer.java  Main.java  Test10.java
Zadanie11/: PasswordCracker.java  PasswordCracker2.java  SimpleClient.java  SimpleServer.java  Test.java
Zestaw01/: ArrayStack.hpp  CMakeLists.txt  Generator.cpp  LinkedStack.hpp  Makefile  ONP.cpp  README.md  Stack.cpp  deskryptor.c  deskryptor.h  kopiuj.c  lider.c  main.c  procesy.c  procinfo.c
Zestaw01/include/: DictonarySample.hpp  SetLinked.hpp  SetSimple.hpp
Zestaw01/src/: DictonarySample.cpp  Generator.cpp  SetLinked.cpp  SetSimple.cpp  testA.cpp  testB.cpp
Zestaw02/: ArrayQueue.hpp  CMakeLists.txt  LinkedQueue.hpp  Makefile  Queue.cpp  README.md  Radix.cpp  drzewko1.c  drzewko2.c  execute.c  macierzysty.c  orphan.c  potomny.c  procinfo.h  script_A.sh  script_B.sh  zombi.c
Zestaw02/include/: LinkedList.hpp  Set.hpp  SetLinked.hpp
Zestaw02/plot/: output_B.txt  plot_B.gnu
Zestaw02/src/: Set.cpp  SetLinked.cpp  testB.cpp
Zestaw03/: CMakeLists.txt  Generator.cpp  LinkedList.cpp  LinkedList.hpp  Makefile  README.md  grupa.c  obsluga.c  script_A.sh  script_B.sh  wysylaj.c
Zestaw03/include/: BinaryHeap.hpp  LinkedList.hpp  PriorityQueue.hpp
Zestaw03/plot/: output_A.txt  output_B.txt  plot_A.gnu  plot_B.gnu
Zestaw03/src/: BinaryHeap.cpp  PriorityQueue.cpp  testB.cpp
Zestaw04/: ArrayList.cpp  ArrayList.hpp  CMakeLists.txt  CursorList.cpp  CursorList.hpp  Makefile  README.md  magazyn.txt  prodkons.c  prog.c  prog.h  script_A.sh
Zestaw04/graph/: graph1.dot  graph2.dot
Zestaw04/include/: Graph.hpp
Zestaw04/plot/: output_A.txt  plot_A.gnu
Zestaw04/src/: Graph.cpp  testA.cpp
Zestaw05/: BubbleSort.cpp  CMakeLists.txt  CountingSort.cpp  Generator.cpp  InsertionSort.cpp  (+10 more)
Zestaw06/: BinaryTree.cpp  BinaryTree.hpp  CMakeLists.txt  Makefile  README.md  powielacz.c  prog.c  script.sh  sem.c  sem.h  semuse.c
Zestaw06/graph/: A.dot  B.dot  knight.dot
Zestaw06/include/: GraphException.hpp
Zestaw06/plot/: output_A.txt  plot_A.gnu
Zestaw06/src/: A.cpp  Crossing.cpp  Graph.cpp  GraphException.cpp  KnightMain.cpp
(+234 files in other folders)
